2011-05-18  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Update to benefit from PAST latest
	API functionalities.

2011-05-18  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Use existing loop iterator for otl
	loops.

	* driver/pocc/driver-clastops.c: Automatically compute the
	declaration of loop iterators;

2011-05-17  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Fix a bug with OTL recomputation.

2011-05-17  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/include/pocc/driver-ptile.h,
	* driver/pocc/driver-ptile.c: New. Driver for the PTile phase.
	* driver/pocc/Makefile.am: Update accordingly.

	* driver/pocc/driver-clastops.c: Move the PTile related code to
	driver-ptile.

	* config/devel/configure.cfg,
	* config/base/configure.cfg,
	* config/local/configure.cfg,
	* config/stable/configure.cfg: Configure scoptools with PAST.

2011-05-16  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-clastops.c,
	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/src/options.h,
	* driver/src/options.c: Add new option --ptile.

	* driver/pocc/Makefile.am,
	* config/devel/driver.cfg: Compile ptile by default in devel mode.

2011-05-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/configure.cfg: configure parametrictiling with PAST.

2011-05-11  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* bin/pocc-util.in: Provide "upgrade" command, which updates PoCC
	automagically.

2011-05-11  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/stable/configure.cfg,
	* config/stable/driver.cfg: Ship polyfeat by default.

	* bin/pocc-checkout: Do not re-download the archive(s) if not
	needed.

2011-05-11  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-clastops.c,
	* driver/src/options.h,