@@ -197,9 +197,9 @@ configure: --with-scoplib=$poccsrcdir/ir/install-scoplib --with-cloog=$poccsrcdi
 make-depends: scoplib cloog candl piplib scoptools clasttools
 
 
-[parametrictiling]
+[ptile]
 category: generators
-module: parametrictiling
+module: ptile
 location: https://alchemy.saclay.inria.fr/svn/users/pouchet/projects/parametrictiling/trunk
 retrieve-method: svn
 bootstrap: bootstrap.sh
