@@ -51,7 +51,7 @@ INCLUDES		=						\
 	-I$(install_prefix)/generators/install-pragmatize/include	\
 	-I$(install_prefix)/generators/install-clasttools/include	\
 	-I$(install_prefix)/generators/install-clastannotation/include	\
-	-I$(install_prefix)/generators/install-parametrictiling/include	\
+	-I$(install_prefix)/generators/install-ptile/include		\
 	-I$(install_prefix)/math/install-piplib/include			\
 	-I$(install_prefix)/math/install-polylib/include		\
 	-I$(install_prefix)/math/install-fm/include			\
@@ -109,7 +109,7 @@ libpocc_la_LIBADD	=						     \
   $(install_prefix)/generators/install-cloog/lib/libcloog-isl.la	     \
   $(install_prefix)/generators/install-pragmatize/lib/libpragmatize.la	     \
   $(install_prefix)/generators/install-clasttools/lib/libclasttools.la	     \
-  $(install_prefix)/generators/install-parametrictiling/lib/libparametrictiling.la	     \
+  $(install_prefix)/generators/install-ptile/lib/libptile.la		     \
   $(install_prefix)/generators/install-clastannotation/lib/libclastannotation.la  \
   $(install_prefix)/math/install-fm/lib/libfm.la
 
